Revert "Fix overlaps and padding on data page"
This reverts commit b01543ae50e14cfe871ce30ec24f07bd2dea7a36.

--- a/themes/base-hugo-theme/assets/scss/site_specific.scss
+++ b/themes/base-hugo-theme/assets/scss/site_specific.scss
@@ -212,7 +212,7 @@ body.data {
     background-color: #F4FCFB;
     }
     main {
-        padding-bottom: 128px;
+        padding-bottom: 224px;
     }
     .select-label {
        margin-bottom: -3px;
